# quant-assistant

./: .gitignore  README.md  digest.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: analysis.yml  ci.yml  digest.yml
config/: base.yaml
scripts/: run_momentum_analysis.py
src/assistant/: config.py
src/assistant/analyzers/: alpha_generator.py  career_advisor.py  market_analyst.py
src/assistant/composer/: builder.py  digest.md.j2  run_digest.py
src/assistant/composer/templates/: digest.md.j2
src/assistant/fetchers/: alphavantage.py  arxiv_papers.py  bls_cpi.py  fred_vix.py  interview_coach.py  job_watcher.py  news_fetcher.py  semantic_scholar.py  semanticscholar.py  wrds_crsp.py
src/assistant/senders/: resend_sender.py  smtp_sender.py
src/assistant/utils/: async_http.py  dto.py  http.py  logging.py  results.py
src/factors/: momentum.py
tests/: conftest.py  test_composer_builder.py  test_email_sending.py  test_fetchers_shapes.py  test_smoke.py  test_smtp_sender.py
tests/unit/: test_alpha_generator.py  test_market_analyst.py  test_resend_sender.py  test_smtp_sender.py
